# insurance_data

./: .gitignore  README.md  claims_data.csv  dashboard.pbix  docker-compose.yml  identity_protection_data.csv  local_database.duckdb  main.py  pyproject.toml  telematics_driving_data.csv
data/: customer_policy_data.csv
insurance_dbt/: dbt_project.yml
insurance_dbt/models/: sources.yml
insurance_dbt/models/marts/: dim_customers.sql  dim_date.sql  dim_policies.sql  fct_claims.sql
insurance_dbt/models/staging/: stg_claims.sql  stg_identity_protection.sql  stg_policies.sql  stg_telematics.sql
scripts/: generate_data.py  load_data.py
