[project]
name = "insurance-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.10.9",
    "dbt-duckdb>=1.9.4",
    "dbt-postgres>=1.9.0",
    "dotenv>=0.9.9",
    "duckdb>=1.3.2",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
]
